k8s/expenses-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expenses-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expenses
  template:
    metadata:
      labels:
        app: expenses
    spec:
      containers:
        - image: tomaz12345/expenses
        #- image: expenses
          name: expenses
          ports:
            - containerPort: 8081
              name: server
        - image: postgres:13
          name: pg-expenses
          ports:
            - containerPort: 5432
              name: server
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
---

apiVersion: v1
kind: Service
metadata:
  name: expenses
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      protocol: TCP
      targetPort: server
  selector:
    app: expenses
